--- a/Serrano Resturant/index.html
+++ b/Serrano Resturant/index.html
@@ -109,7 +109,7 @@
 								</br>
 
 
-							<a href="https://www.google.com" target="_blank">
+							<a href="contact.html" target="_blank">
 								<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 							</a>
 								<p class="tm-gallery-price">€14.99 /<strike>$20.00</strike> </p>
@@ -163,7 +163,7 @@
 
 
 
-							<a href="https://www.google.com" target="_blank">
+							<a href="contact.html" target="_blank">
 								<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 							</a>
 
@@ -211,7 +211,7 @@
 							<br>
 							</br>
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
@@ -273,7 +273,7 @@
 							<br>
 						</br>
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
@@ -333,7 +333,7 @@
 							</br>
 
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
@@ -387,7 +387,7 @@
 							</br>
 
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
@@ -449,7 +449,7 @@
 							</br>
 
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
@@ -509,7 +509,7 @@
 							</br>
 
 
-						<a href="https://www.google.com" target="_blank">
+						<a href="contact.html" target="_blank">
 							<button id="orderButton">ORDER NOW <img src="img/icon_shopping.png" alt="Popup Icon"></button>
 						</a>
 
