--- a/Serrano Resturant/index.html
+++ b/Serrano Resturant/index.html
@@ -660,13 +660,13 @@
 				<div class="row">
 					<div class="col-md-6">
 						<figure class="tm-description-figure">
-							<img src="img/img-01.jpg" alt="Image" class="img-fluid" />
+							<img src="img/about-06.jpg" alt="Image" class="img-fluid" />
 						</figure>
 					</div>
 					<div class="col-md-6">
 						<div class="tm-description-box"> 
-							<h4 class="tm-gallery-title">Maecenas nulla neque</h4>
-							<p class="tm-mb-45">Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a rel="nofollow" href="https://templatemo.com/contact">talk to us</a> for additional permissions about our templates. Thank you.</p>
+							<h4 class="tm-gallery-title">History of our restaurant</h4>
+							<p class="tm-mb-45">Nestled in the heart of the city, our Italian pizza restaurant boasts a rich history that spans generations. Established in 1950 by Giovanni Rossi, a passionate Italian chef hailing from the bustling streets of Naples, our restaurant quickly became a local favorite. Giovanni's dedication to preserving the authentic flavors and techniques of traditional Italian pizza-making earned him a loyal following..</p>
 							<a href="about.html" class="tm-btn tm-btn-default tm-right">Read More</a>
 						</div>
 					</div>
