--- a/Serrano Resturant/contact.html
+++ b/Serrano Resturant/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Serrano Pizza Heimserive - Contact Page</title>
+	<link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
 	<link href="css/styles.css" rel="stylesheet" />
